# django-drf-template

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  manifest.json  pyproject.toml  pytest.ini  releasenotes.txt  requirements.txt
apps/core/: admin.py
apps/core/api/: urls.py
apps/core/api/schema/: __init__.py  user.py
apps/core/api/serializers/: __init__.py  user.py
apps/core/api/views/: __init__.py  user.py
apps/core/managers/: __init__.py  user.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  user.py
apps/core/services/: __init__.py  user.py
config/: asgi.py  urls.py  wsgi.py
config/auth/: jwt_auth.py
config/settings/: authentication.py  base.py  development.py  local_settings.py.example  production.py  testing.py
config/utils/: exceptions.py  response.py
core/: admin.py
core/managers/: __init__.py
core/migrations/: 0001_initial.py
core/serializers/: user.py
docs/: local_development.md
proj/: asgi.py  urls.py  wsgi.py
proj/settings/: base.py  production.py
